.zshrc updates/fixes and focus on python3.12 current states of p10k and tmux.conf I don't use hyper anymore

--- a/robot-unicorn-attack/wsl/.tmux.conf
+++ b/robot-unicorn-attack/wsl/.tmux.conf
@@ -1,5 +1,7 @@
 #Set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
+# set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:RGB"
 
 # Enable mouse support
 set -g mouse on
@@ -17,12 +19,28 @@ bind C-a send-prefix
 bind-key M set -g mouse on \; display-message "Mouse: ON"
 bind-key m set -g mouse off \; display-message "Mouse: OFF"
 
+# Use Vim-style keys to move between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Vim keys to resize panes (use shift)
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 # display options
 set-option -g pane-border-lines "double"
-set-option -g pane-border-style fg=purple
-set-option -g pane-active-border-style fg=brightgreen
-set-option -g window-style bg=colour233
-set-option -g window-active-style bg=colour000
+set-option -g pane-border-style fg=color55
+set-option -g pane-active-border-style fg=colour28
+# set-option -g window-style bg=colour233
+# set-option -g window-active-style bg=colour000
+set-option -g pane-border-style fg=colour55
+set-option -g pane-active-border-style fg=colour28
+set-option -g window-style bg=default
+set-option -g window-active-style bg=default
 
 # list the colors with this bash snippet:
 # for i in {0..255}; do
@@ -31,13 +49,15 @@ set-option -g window-active-style bg=colour000
 
 # Status bar
 set-option -g status-position top
-set-option -g status-bg darkblue
+# set-option -g status-bg darkblue
+set-option -g status-bg colour18
 set-option -g status-fg white
 set-option -g status-left '#[fg=white]#H'
 set-option -g status-right '#[fg=white]%Y-%m-%d %H:%M'
 
 set -g @logging-path "$HOME/.tmux/logs"
 
+# below never really worked, just ignore it
 
 # tpm - tmux plugin manager
 # prefix capital-I (C-a + shift-I) to install all tpm-listed plugins
