--- a/robot-unicorn-attack/wsl/.tmux.conf
+++ b/robot-unicorn-attack/wsl/.tmux.conf
@@ -6,6 +6,9 @@ set-option -ga terminal-overrides ",xterm-256color:RGB"
 # Enable mouse support
 set -g mouse on
 
+# Make tmux fully passthrough keys
+set -g xterm-keys on
+
 # set source tmux.conf to prefix-r
 unbind r
 bind r source-file ~/.tmux.conf
