--- a/robot-unicorn-attack/wsl/starship.toml
+++ b/robot-unicorn-attack/wsl/starship.toml
@@ -30,7 +30,8 @@ format = '\[[[ $symbol $branch ](fg:#769ff0)]($style)'
 
 [git_status]
 style = "none"
-format = '[[($all_status$ahead_behind )](fg:#769ff0)\]]($style)'
+# format = '[$ahead_behind](fg:#769ff0)\]($style)'
+format = '[($ahead_$behind$staged$modified)](fg:#769ff0)\]($style)'
 
 [python]
 symbol = ""
