initial working config for arch on xps-13-9305

--- a/xps-13-9305/hypr/hyprland.conf
+++ b/xps-13-9305/hypr/hyprland.conf
@@ -46,7 +46,13 @@ $fileManager = dolphin
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & wofi
+# possibly using hyprctl dispatch will let it get the glyphs?
+# https://github.com/Alexays/waybar/issues/4639
+exec-once = hyprctl dispatch exec waybar
+exec-once = hyprpaper & wofi
+
+# lock screen and suspend on lid
+exec-once = hypridle
 
 # this allows gui apps to pop an auth window for sudo powers
 exec-once = systemctl --user start hyprpolkitagent.service
@@ -248,7 +254,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, W, killactive,
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -256,7 +262,7 @@ bind = $mainMod, space, exec, pkill wofi || wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + vim keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
@@ -311,6 +317,11 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# the lid
+# bindl = , switch:on:Lid Switch,exec,loginctl lock-session && systemctl suspend
+# let hypridle handle the suspend, closing the lid will just lock the system
+bindl = , switch:on:Lid Switch,exec,loginctl lock-session
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
