closing lid locks the system suspend does not yet lock the system

--- a/xps-13-9305/hypr/hyprland.conf
+++ b/xps-13-9305/hypr/hyprland.conf
@@ -51,8 +51,11 @@ $fileManager = dolphin
 exec-once = hyprctl dispatch exec waybar
 exec-once = hyprpaper & wofi
 
-# lock screen and suspend on lid
-exec-once = hypridle
+# managed w systemd
+# exec-once = hypridle
+
+# notifications
+exec-once = mako
 
 # this allows gui apps to pop an auth window for sudo powers
 exec-once = systemctl --user start hyprpolkitagent.service
@@ -319,9 +322,8 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # the lid
-# bindl = , switch:on:Lid Switch,exec,loginctl lock-session && systemctl suspend
 # let hypridle handle the suspend, closing the lid will just lock the system
-bindl = , switch:on:Lid Switch,exec,loginctl lock-session
+bindl = , switch:on:Lid Switch, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
