--- a/xps-13-9305/hypridle/hypridle.conf
+++ b/xps-13-9305/hypridle/hypridle.conf
@@ -1,11 +1,13 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock
-    before_sleep_cmd = loginctl lock-session    # lock before suspend
-    after_sleep_cmd = hyprctl dispatch dpms on  # turn on display after sleep
+    # avoid starting multiple hyprlock
+    lock_cmd = pidof hyprlock || hyprlock       
+    # lock before suspend
+    before_sleep_cmd = loginctl lock-session    
+    # turn on display after sleep
+    after_sleep_cmd = hyprctl dispatch dpms on  
 }
 
 listener {
-    # listen for lid
     timeout = 150                               # 2.5 minutes
     on-timeout = brightnessctl set 10%
     on-resume = brightnessctl set 100%
